konst/tests/misc_tests/misc_nonmacro_ui_tests/array_intoiter_constructor_btype_err.rs
use konst::array::IntoIter;


fn main() {
    let _ = IntoIter::<String, 1, _>::of_drop([String::new()]).into_copy();
}

